--- a/src/App.css
+++ b/src/App.css
@@ -1,26 +1,3 @@
-.App {
-    text-align: center;
-}
-
-.App-logo {
-    height: 40vmin;
-    pointer-events: none;
-}
-
-.App-header {
-    min-height: 100vh;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    font-size: calc(10px + 2vmin);
-    color: white;
-}
-
-.App-link {
-    color: #61dafb;
-}
-
 #tsparticles {
     position: fixed;
     height: 100%;
@@ -36,7 +13,7 @@ html, body, #root, .App {
     height: 100%;
 }
 
-#companyInfo {
+#corpInfo {
     height: 100%;
     padding: 0;
     margin: 0;
@@ -48,39 +25,22 @@ html, body, #root, .App {
     align-items: center;
     justify-content: center;
     color: white;
+    text-align: center;
 }
 
-#companyInfo h1 {
+#corpInfo h1 {
     /* font-family: 'Texturina', serif; */
     /* font-family: 'Cinzel', serif; */
     font-family: 'Piazzolla', serif;
+    font-size:5rem;
+    margin: 0;
 }
 
-#companyInfo p {
+#corpInfo p {
     font-family: 'Roboto', sans-serif;
+    font-size: 2rem;
+    margin: 0;
 }
 
 
-
-/* Small devices (landscape phones, 544px and up) */
-@media (min-width: 544px) {
-    #companyInfo h1 {font-size:1.5rem;} /*1rem = 16px*/
-    #companyInfo p {font-size:1.5rem;} /*1rem = 16px*/
-}
-
-/* Medium devices (tablets, 768px and up) The navbar toggle appears at this breakpoint */
-@media (min-width: 768px) {
-    #companyInfo h1 {font-size:2rem;} /*1rem = 16px*/
-}
-
-/* Large devices (desktops, 992px and up) */
-@media (min-width: 992px) {
-    #companyInfo h1 {font-size:2.5rem;} /*1rem = 16px*/
-}
-
-/* Extra large devices (large desktops, 1200px and up) */
-@media (min-width: 1200px) {
-    #companyInfo h1 {font-size:5rem;} /*1rem = 16px*/
-    #companyInfo p {font-size:1.5rem;} /*1rem = 16px*/
-}
 
